Aco 213 web server api exposes password hashes (#502)
## [Link to JIRA Ticket](https://flexgen.atlassian.net/browse/ACO-213)

## Description
#### Issue
We were including password hashes in certain api responses

#### Fix
Remove sensitive data from api responses

## How Has This Been Tested?
#### Automated Tests
`pnpm run test -- user`
